Add styles to the book component

--- a/src/components/BooksList/BooksList.css
+++ b/src/components/BooksList/BooksList.css
@@ -7,7 +7,7 @@
   background-color: #fff;
 }
 
-.book-item button {
+.book-btn {
     font-family: 'RobotoSlab', sans-serif;
     font-size: 0.875rem;
     font-weight: 300;
