--- a/src/components/Book/Book.css
+++ b/src/components/Book/Book.css
@@ -1,52 +1,63 @@
 .book-container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  padding: 0 1rem;
 }
 
 .book-text span {
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
 }
 
 .category-span {
-    width: 3.063rem;
-    height: 1.125rem;
-    margin: 0 2.438rem 0 0;
-    opacity: 0.5;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 0.875rem;
-    font-weight: bold;
-    letter-spacing: normal;
-    color: #121212;
+  width: 3.063rem;
+  height: 1.125rem;
+  margin: 0 2.438rem 0 0;
+  opacity: 0.5;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.875rem;
+  font-weight: bold;
+  letter-spacing: normal;
+  color: #121212;
 }
 
 .title-span {
-    width: 12.313rem;
-    height: 1.813rem;
-    margin: 0.188rem 20.188rem 0 0;
-    font-family: 'RobotoSlab', sans-serif;
-    font-size: 1.375rem;
-    font-weight: bold;
-    letter-spacing: -0.2px;
-    color: #121212;
+  width: 12.313rem;
+  height: 1.813rem;
+  margin: 0.188rem 20.188rem 0 0;
+  font-family: 'RobotoSlab', sans-serif;
+  font-size: 1.375rem;
+  font-weight: bold;
+  letter-spacing: -0.2px;
+  color: #121212;
 }
 
 .author-span {
-    width: 6.688rem;
-    height: 1.188rem;
-    margin: 0.25rem 0 0;
-    font-family: 'RobotoSlab', sans-serif;
-    font-size: 0.875rem;
-    font-weight: 300;
-    letter-spacing: normal;
-    color: #4386bf;
+  width: 6.688rem;
+  height: 1.188rem;
+  margin: 0.25rem 0 0;
+  font-family: 'RobotoSlab', sans-serif;
+  font-size: 0.875rem;
+  font-weight: 300;
+  letter-spacing: normal;
+  color: #4386bf;
 }
 
 .progress-container {
   display: flex;
   align-items: center;
   margin-right: 1rem;
+}
+
+.current-chapter {
+  color: #121212;
+  opacity: 0.5;
+}
+
+.chapter-num {
+  margin: 0.5rem 0;
 }
 
 .update-btn {
