--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,34 +1,35 @@
 nav {
-  padding: 1.438rem 6.188rem 1.688rem 6.25rem;
+  padding: 1rem 4rem;
   background-color: #fff;
   display: flex;
   align-items: center;
-  flex-direction: row;
+  justify-content: space-between;
 }
 
 .bookstore-title {
   width: 15rem;
-    height: 2.313rem;
-    margin: 0.375rem 2.938rem 0.125rem 0;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.875rem;
-    font-weight: bold;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    color: #0290ff;
+  height: 2.313rem;
+  margin: 0.375rem 2.938rem 0.125rem 0;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.875rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #0290ff;
 }
 
 .nav-links {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 0.813rem;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: 1.9px;
-    color: #121212;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.813rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 1.9px;
+  color: #121212;
+  display: flex;
 }
 
 .books-link {
@@ -45,8 +46,8 @@ nav {
 }
 
 .profile-icon {
-    width: 2.813rem;
-    height: 2.813rem;
-    padding: 0.875rem;
-    border: solid 1px #e8e8e8;
+  width: 2.813rem;
+  height: 2.813rem;
+  padding: 0.875rem;
+  border: solid 1px #e8e8e8;
 }
