--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,6 +6,11 @@ nav {
   justify-content: space-between;
 }
 
+.links-container {
+  display: flex;
+  align-items: center;
+}
+
 .bookstore-title {
   width: 15rem;
   height: 2.313rem;
@@ -28,7 +33,7 @@ nav {
   font-style: normal;
   line-height: normal;
   letter-spacing: 1.9px;
-  color: #121212;
+  color: black;
   display: flex;
 }
 
@@ -36,6 +41,7 @@ nav {
   width: 3.688rem;
   height: 1rem;
   text-decoration: none;
+  color: black;
 }
 
 .categories-link {
@@ -43,11 +49,14 @@ nav {
   height: 1rem;
   opacity: 0.5;
   text-decoration: none;
+  color: black;
 }
 
 .profile-icon {
   width: 2.813rem;
   height: 2.813rem;
-  padding: 0.875rem;
+  padding: 0.1rem;
+  color: #0290ff;
   border: solid 1px #e8e8e8;
+  border-radius: 50%;
 }
